Added Amdocs test questions